kubernetes/microservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: microservice
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: echoserver
