kubernetes/microservice/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: microservice
  annotations:
    kubernetes.io/ingress.class: 'gce'
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: k8s-echoserver.vikramtiwari.com
      http:
        paths:
          - backend:
              serviceName: echoserver
              servicePort: 80
            path: /
  tls:
    # With this configuration kube-lego will generate a secret in namespace microservices called `echoserver-tls`
    # for the URL `k8s-echoserver.vikramtiwari.com`
    - hosts:
        - "k8s-echoserver.vikramtiwari.com"
      secretName: echoserver-tls
